--- a/DisplayForm/Pages/Index.razor
+++ b/DisplayForm/Pages/Index.razor
@@ -1,9 +1,34 @@
 ﻿@page "/"
+@using SBShared.Models
+@using DisplayForm.Services
+@inject IQueueService queue
+
 
 <PageTitle>Index</PageTitle>
 
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
+
+<EditForm Model="@person" OnValidSubmit="@PublishMessage">
+    <DataAnnotationsValidator />
+    <ValidationSummary />
+    <div class="form-group">
+    <label for="firstName"> First Name </label>
+    <InputText id="lastname" class="form-control" @bind-Value="person.Name" />
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</EditForm>
+
+@code {
+    private PersonModel person = new PersonModel();
+
+    private async Task PublishMessage()
+    {
+        await queue.SendMessageAsync(person, "personqueue");
+        person = new PersonModel();
+    }
+
+}
 
 <SurveyPrompt Title="How is Blazor working for you?" />
